--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Tomkaehst – Github Personal Webpage</title>
-</head>
-<body>
-	<h1>Hello World!</h1>
-	<b>This website is currently under construction. Sorry. Didn't had the time to build it yet.</b>
-</body>
-</html>
+# Test with Markdown
+- List element 1
+- List element 2 *in bold*
